hrms-vpc.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: An Web Application VPC Template for hrms 
Resources:
  hrmsVPC: 
    Type: AWS::EC2::VPC
    Properties: 
      CidrBlock: 192.168.0.0/16
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
        - Key: Name
          Value: hrms

  hrmspublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref hrmsVPC
      CidrBlock: 192.168.0.0/24
      AvailabilityZone: "us-east-2a"
      MapPublicIpOnLaunch: "true"
      Tags:
      - Key: Name
        Value: hrms-public-subnet

  
  hrmspriavteSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref hrmsVPC
      CidrBlock: 192.168.1.0/24
      AvailabilityZone: "us-east-2b"
      MapPublicIpOnLaunch: "false"
      Tags:
      - Key: Name
        Value: hrms-private-subnet

  hrmsInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: hrms-internet-gateway

  hrmsAttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: hrmsVPC
      InternetGatewayId:
        Ref: hrmsInternetGateway

  hrmsPublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:  
        Ref: hrmsVPC
      Tags:
      - Key: Name
        Value: hrms-public-RouteTable

  hrmsPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: hrmsAttachGateway
    Properties:
       RouteTableId:
         Ref: hrmsPublicRouteTable
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId:
         Ref: hrmsInternetGateway
  
  hrmsPublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: hrmspublicSubnet
      RouteTableId:
        Ref: hrmsPublicRouteTable

  hrmsPrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:  
        Ref: hrmsVPC
      Tags:
      - Key: Name
        Value: hrms-private-RouteTable
  
  hrmsPrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: hrmspriavteSubnet
      RouteTableId:
        Ref: hrmsPrivateRouteTable

  hrmsPublicNetworkAcl:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId:
        Ref: hrmsVPC
      Tags:
      - Key: Name
        Value: hrms-public-nacl

  hrmsPublicNetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId:
        Ref: hrmspublicSubnet
      NetworkAclId:
        Ref: hrmsPublicNetworkAcl

  hrmsPublicSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to client host
      VpcId: !Ref hrmsVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
